Dailies: bank setup, approval-driven Miscellania, Robin last, overlay fixes
Skip not moving the sidebar was the farm-run lesson biting again, one caller
further along: markThrough posted to Shortest Path BEFORE rebuildTab(), so a
throw from that foreign plugin updated the run (the overlay reads it directly)
and then skipped the repaint. routeToNext now swallows in both modules — no
routing is worth losing a repaint over — which makes startRun's own try/catch
redundant.

Tears of Guthix advanced the moment you caught your first tear. The visit is
the minigame ENDING, so it now waits for the collecting flag to drop 1 -> 0,
which is when the tears are drunk and the XP lands.

Miscellania progresses at 100% approval rather than on collecting: it has no
"collected today" flag, and approval is what you actually go there to fix. Its
varbit is 0..127 (core's MAX_APPROVAL), so 100% is 127 — read as a percentage
it would have called 78% "100". Nothing in the module is hand-ticked now.

Robin moves to the end of the run and points at the Port Phasmatys bank, not at
Robin: he takes only unnoted bones and gives back a bonemeal AND a bucket of
slime for each, so one bone in costs two slots out, an inventory holds 14, and
legs 4 is three trips. The overlay says so, with the trip count for your tier.

"Configure gear & inventory" saves your worn gear + inventory, and a daily run
now lays it over the bank and glows what is still to withdraw — the farm run's
Bank Tags layout and Loadout Lab's glow, reused rather than copied. Working out
"what am I still missing" moved to AccountState so both runs share one answer.

Overlay: travel gets its own line. As a right-hand value it wrapped to four
lines beside a one-line left and left a hole three lines deep — the blank space
in the screenshot.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>